--- a/c_programming_language/Makefile
+++ b/c_programming_language/Makefile
@@ -1,4 +1,4 @@
-all: clean prep 001 002 003 004 005 006 007 008 009 010 011 012 013 014 015 016 017 018 019 020 021 022 023 024 025 026 027 028 029 030
+all: clean prep 001 002 003 004 005 006 007 008 009 010 011 012 013 014 015 016 017 018 019 020 021 022 023 024 025 026 027 028 029 030 031
 
 prep:
 	if [ ! -d ./bin ]; then mkdir ./bin/; else echo "./bin detected, skipping creation..."; fi
@@ -63,5 +63,7 @@ prep:
 	cc 029-longer_80_chars.c -o ./bin/029-longer_80_chars
 030:
 	cc 030-remove_blanks_tabs.c -o ./bin/030-remove_blanks_tabs
+031:
+	cc 031-reverse_string.c -o ./bin/031-reverse_string
 clean:
 	rm -rf ./bin/*
