--- a/c_programming_language/Makefile
+++ b/c_programming_language/Makefile
@@ -1,4 +1,4 @@
-all: clean prep 001 002 003 004 005 006 007 008 009 010 011 012 013 014 015 016 017 018 019 020 021 022 023 024 025 026 027 028 029 030 031 032 033
+all: clean prep 001 002 003 004 005 006 007 008 009 010 011 012 013 014 015 016 017 018 019 020 021 022 023 024 025 026 027 028 029 030 031 032 033 034 035 036
 
 prep:
 	if [ ! -d ./bin ]; then mkdir ./bin/; else echo "./bin detected, skipping creation..."; fi
@@ -69,5 +69,11 @@ prep:
 	cc 032-detab.c -o ./bin/032-detab
 033:
 	cc 033-entab.c -o ./bin/033-entab
+034:
+	cc 034-fold.c -o ./bin/034-fold
+035:
+	cc 035-remove_comments.c -o ./bin/035-remove_comments
+036:
+	cc 036-syntax_check.c -o ./bin/036-syntax_check
 clean:
 	rm -rf ./bin/*
