--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,1 @@
-title: Learning
-author:
-  name: Vekiar
-  email: mrv@vekiar.com
-description: >
-  Collection of projects to learn new tricks and re-learn some old ones as well.
-theme: minima
-header_pages:
-  - about.md
-minima:
-  skin: classic
-  show_excerpts: false
-  date_format: "%b-%d-%Y"
+theme: jekyll-theme-minimal
